# drogue-microbit

./: Cargo.toml  README.md  openocd.cfg
.cargo/: config
drogue-microbit-ess/: Cargo.toml
drogue-microbit-ess/src/: lib.rs
drogue-microbit-matrix/: Cargo.toml  build.rs
drogue-microbit-matrix/src/: lib.rs
drogue-microbit-rtc-baremetal/: Cargo.toml  README.md
drogue-microbit-rtc-rtic/: Cargo.toml
drogue-microbit-rtc-rtic/src/: main.rs
examples/ble-thermometer/: Cargo.toml
examples/ble-thermometer/src/: main.rs
examples/rtc-baremetal/: Cargo.toml  README.md
examples/rtc-baremetal/src/: main.rs
examples/rtc-rtic/: Cargo.toml  README.md
examples/v1/ble-thermometer/: Cargo.toml  Embed.toml  README.md
examples/v1/ble-thermometer/.cargo/: config
examples/v1/ble-thermometer/src/: main.rs
examples/v1/rtc-baremetal/: Cargo.toml  memory.x
examples/v1/rtc-baremetal/.cargo/: config
examples/v1/rtc-baremetal/src/: main.rs
examples/v1/rtc-rtic/: Cargo.toml  Embed.toml
examples/v1/rtc-rtic/src/: main.rs
examples/v2/lora-breakout/: Cargo.toml
examples/v2/lora-breakout/src/: main.rs
v1.5/: Cargo.toml  Makefile  openocd.cfg
v1.5/src/: main.rs
