[package]
authors = ["Ulf Lilleengen <ulf.lilleengen@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "drogue-microbit-matrix"
version = "0.1.0"
categories = ["embedded", "no-std"]

[dependencies]
cortex-m = "0.6.4"
nrf51-hal = { version = "0.12.0", features = ["rt"] }
embedded-hal = { version = "0.2.3", features = ["unproven"] }
void = { version = "1.0.2", default-features = false }
