[package]
authors = ["Ulf Lilleengen <ulf.lilleengen@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "drogue-microbit-rtc-rtic"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.4"
cortex-m-rt = { version = "0.6.11", features = ["device"] }
cortex-m-semihosting = "0.3.5"
cortex-m-rtic = "0.5.5"
panic-semihosting = "0.5.5"
rtt-target = {version = "0.2.0", features = ["cortex-m"] }
panic-halt = "0.2.0"
nrf51-hal = { path = "../../../nrf-hal/nrf51-hal", features = ["rt"] }
drogue-microbit-matrix = { path = "../drogue-microbit-matrix" }

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[dependencies.void]
default-features = false
version = "1.0.2"

[[bin]]
name = "drogue-microbit-rtc-rtic"
test = false
bench = false
