[package]
authors = ["Ulf Lilleengen <ulf.lilleengen@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "drogue-microbit"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
rtt-target = {version = "0.2.0", features = ["cortex-m"] }
panic-halt = "0.2.0"
nrf51-hal = { version = "0.11.0", features = ["rt"] }

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[dependencies.void]
default-features = false
version = "1.0.2"

[[bin]]
name = "drogue-microbit"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
