[package]
authors = ["Ulf Lilleengen <ulf.lilleengen@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "rtc-baremetal"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.4"
cortex-m-rt = { version = "0.6.11", features = ["device"] }
cortex-m-semihosting = "0.3.5"
rtt-target = {version = "0.2.0", features = ["cortex-m"] }
panic-halt = "0.2.0"
nrf51-hal = { git = "https://github.com/nrf-rs/nrf-hal", branch = "master", features = ["rt"] }

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[dependencies.void]
default-features = false
version = "1.0.2"

[[bin]]
name = "rtc-baremetal"
test = false
bench = false
