[package]
authors = ["Ulf Lilleengen <ulf.lilleengen@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "lora-breakout"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.4"
cortex-m-rt = { version = "0.6.11", features = ["device"] }
cortex-m-rtic = "0.5.5"
rtt-target = {version = "0.2.0", features = ["cortex-m"] }
panic-halt = "0.2.0"
nrf52833-hal = { version = "0.12.0", features = ["rt"] }
log = "0.4.11"
rtt-logger = "0.1.0"
embedded-hal = { version = "0.2.3", features = ["unproven"] }
void = { version = "1.0.2", default-features = false }
drogue-rak811 = { path = "../../../../drogue-rak811" }

[[bin]]
name = "lora-breakout"
test = false
bench = false
